--- a/src/frontend/css/styles.css
+++ b/src/frontend/css/styles.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
 @font-face {
   font-family: neon;
   src: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/707108/neon.ttf);
@@ -9,9 +10,7 @@ body {
   text-align: center;
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Ubuntu';
   background-color: #003;
   padding-top: 50px;
   color: white;
@@ -32,9 +31,17 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-bottom: 5px;
   font-size: 100px;
-  margin: 10px auto 80px;
+  margin: 10px auto 0;
+}
+
+.game-title-bottom {
+  font-size: 70px;
+  margin-bottom: 80px;
+}
+
+.game-title-auth {
+  margin-bottom: 80px;
 }
 
 .neon {
@@ -104,6 +111,7 @@ body {
   border-radius: 5px;
   margin: 20px;
   cursor: pointer;
+  font-family: 'Ubuntu';
 }
 
 .button:hover {
@@ -149,4 +157,25 @@ body {
 
 .board :nth-child(9) {
   border-bottom-right-radius: 10px;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  max-width: 320px;
+  margin: auto;
+}
+
+.form input {
+  padding: 12px 0 12px 20px;
+  border: none;
+  background-color: #f5f5f5;
+  margin-bottom: 20px;
+  width: 250px;
+}
+
+.form input:last-child{
+  margin-bottom: 0;
 }
