--- a/src/frontend/css/styles.css
+++ b/src/frontend/css/styles.css
@@ -44,57 +44,16 @@ body {
   margin-bottom: 80px;
 }
 
-.neon {
+.left-title {
   font-family: neon;
-  color: #FB4264;
-  text-shadow: 0 0 3vw #F40A35;
+  color: #e316fa;
+  text-shadow: 0 0 3vw #ff02f2;
 }
 
-.flux {
+.right-title {
   font-family: neon;
-  color: #426DFB;
-  text-shadow: 0 0 3vw #2356FF;
-}
-
-.neon {
-  animation: neon 1s ease infinite;
-  -moz-animation: neon 1s ease infinite;
-  -webkit-animation: neon 1s ease infinite;
-}
-
-@keyframes neon {
-
-  0%,
-  100% {
-    text-shadow: 0 0 1vw #FA1C16, 0 0 3vw #FA1C16, 0 0 10vw #FA1C16, 0 0 10vw #FA1C16, 0 0 .4vw #FED128, .5vw .5vw .1vw #806914;
-    color: #FED128;
-  }
-
-  50% {
-    text-shadow: 0 0 .5vw #800E0B, 0 0 1.5vw #800E0B, 0 0 5vw #800E0B, 0 0 5vw #800E0B, 0 0 .2vw #800E0B, .5vw .5vw .1vw #40340A;
-    color: #806914;
-  }
-}
-
-.flux {
-  animation: flux 2s linear infinite;
-  -moz-animation: flux 2s linear infinite;
-  -webkit-animation: flux 2s linear infinite;
-  -o-animation: flux 2s linear infinite;
-}
-
-@keyframes flux {
-
-  0%,
-  100% {
-    text-shadow: 0 0 1vw #1041FF, 0 0 3vw #1041FF, 0 0 10vw #1041FF, 0 0 10vw #1041FF, 0 0 .4vw #8BFDFE, .5vw .5vw .1vw #147280;
-    color: #28D7FE;
-  }
-
-  50% {
-    text-shadow: 0 0 .5vw #082180, 0 0 1.5vw #082180, 0 0 5vw #082180, 0 0 5vw #082180, 0 0 .2vw #082180, .5vw .5vw .1vw #0A3940;
-    color: #146C80;
-  }
+  color: #28D7FE;
+  text-shadow: 0 0 3vw #0fc9f2;
 }
 
 .buttons {
@@ -105,7 +64,8 @@ body {
 .button {
   padding: 10px 20px;
   font-size: 20px;
-  background-color: #df6310;
+  background-color: #af0bc1;
+  box-shadow: 0 0 3vw #7d036a;
   color: white;
   border: none;
   border-radius: 5px;
@@ -113,10 +73,11 @@ body {
   cursor: pointer;
   font-family: 'Ubuntu';
   width: 160px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button:hover {
-  background-color: #b85e10;
+  background-color: #8f079e;
 }
 
 
